#833174 by bleen18 | Jeff Burnz: Fixed Forum name too close to forum icon.

--- a/css/style.css
+++ b/css/style.css
@@ -1048,6 +1048,9 @@ div.password-suggestions {
 div.vertical-tabs .vertical-tabs-panes fieldset.vertical-tabs-pane {
   padding: 1em;
 }
+#forum tr td.forum {
+  padding-left: 35px;
+}
 
 /* --------------- Search Form ---------------- */
 
